<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">T1DM</string>
    <string name="title_activity_ask_user">AskUser</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_begin_monitoring">Begin Monitoring</string>
    <string name="title_activity_bgchecking_alarm">BG Checking Alarm</string>
    <string name="title_activity_bgschedule">BG Schedule</string>
    <string name="title_activity_exercise_alarm">Exercise Alarm</string>
    <string name="title_activity_exercise_schedule">Exercise Schedule</string>
    <string name="title_activity_insulin_alarm">Insulin Alarm</string>
    <string name="title_activity_insulin_schedule">Insulin Schedule</string>
    <string name="title_activity_meal_schedule">Meal Schedule</string>
    <string name="title_activity_plot_readings">Plot Readings</string>
    <string name="title_activity_sleep_alarm">Sleep Alarm</string>
    <string name="title_activity_sleep_schedule">Sleep Schedule</string>
    <string name="title_activity_splash_screen">T1DM</string>
    <string name="title_activity_suggestion_alarm">Suggestion Alarm</string>
    <string name="title_activity_suggestion_schedule">Suggestion Schedule</string>
    <string name="title_activity_t1_dmapplication">T1DM Application</string>
    <string name="title_activity_user_details">User Details</string>
    <string name="icon">Application Icon</string>
    <string name="title_welcome_screen">Welcome to T1DM</string>
    <string name="editTextUserName">Enter Your Name</string>
    <string name="txtName">User Name TextBox</string>
    <string name="editTextEmergencyPhone">Enter Emergency Phone Number</string>
    <string name="editTextDrName">Enter Doctor\'s Name</string>
    <string name="editTextDrPhone">Enter Doctor\'s Phone Number</string>
    <string name="editTextEmail">Enter Your Email Address</string>
    <string name="editTextAddress">Enter Your Postal Address</string>
    <string name="editTextAge">Enter Your Age</string>
    <string name="menu_save_user_details">Save</string>
    <string name="menuAddNewMealItem">Add New Meal Schedule</string>
    <string name="menuNextSchedule">Next Schedule</string>
    <string name="title_activity_t1_dm__menu">T1DM_Menu</string>
    <string name="title_activity_schedules">Schedules</string>
    <string name="menuAddNewInsulinItem">Add New Insulin Schedule</string>
    <string name="title_activity_bgchecking">BGChecking</string>
    <string name="menuAddNewBGCItem">Add New BG Checking Schedule</string>
    <string name="menuAddNewExerciseItem">Add New Exercise Schedule</string>
    <string name="menuAddNewSleepItem">Add New Sleep Schedule</string>
    <string name="menuAddNewItem">Add New Schedule</string>
    <string name="menuDone">Done</string>
    <string name="title_activity_manage_insulin_dosage">Manage Insulin Dosage</string>
    <string name="insulinUnits">Units</string>
    <string name="textView">TextView</string>
    <string name="dosage">0</string>
    <string name="glucoseLevel">Enter blood glucose level</string>
    <string name="cbInsulin">Insulin not as per normal</string>
    <string name="notNormalInsulin">Insulin not as scheduled</string>
    <string name="notNormalMeal">Meal not as scheduled</string>
    <string name="cbMeal">Meal not as per normal</string>
    <string name="notNormalMealContent">What did I eat ?</string>
    <string name="miscComments">Miscellaneous Notes</string>
    <string name="misc">Any Special Notes ?</string>
    <string name="fromDate">From </string>
    <string name="toDate">To </string>
    <string name="title_activity_readings_chart">ReadingsChart</string>
    <string name="menuSavePlot">Save Chart</string>
    <string name="title_activity_manage_emergency_module">Manage Emergency Module</string>
    <string name="rbStringEnableEmergency">Enable Emergency</string>
    <string name="rbStringDisableEmergency">Disable Emergency</string>
    <string name="txtStringChangeEmergency">Change Emergency Setting</string>
    <string name="menuStartStopRecording">Start/Stop Recorded Message</string>
    <string name="menuRemoveRecord">Remove Recorded Message</string>
    <string name="menuPlayPauseRecord">Play/Pause Recorded Message</string>
    <string name="menuRecording">Recording</string>
    <string name="title_activity_record_message">Record Message</string>
    <string name="title_activity_home">T1DM Home</string>
    <string name="menuShowChart">Show Trend</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="title_activity_slide_side_menu">SlideSideMenu</string>
    <string name="title_activity_send_feedback">Send Feedback</string>
    <string name="btnSendFeedback">Send</string>
    <string name="etCommentsText">T1DM can help you even better with your valuable feedback.</string>
    <string name="btnSearch">Search</string>
    <string name="title_activity_dietary_suggestions">DietarySuggestions</string>
    <string name="title_activity_body_requirements">Body Requirements</string>
    <string name="txtEnableAutoReporting">Enable Auto Reporting</string>
    <string name="cbEnableAudio">Personalized Alarm</string>
    <string name="title_activity_generate_report">Generate Report</string>
    <string name="tvToDate"> To YYYY-MM-DD</string>
    <string name="tvFromDate"> From YYYY-MM-DD</string>

    <string-array name="activity_level_array">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_available_foods">Available Foods</string>
    <string name="title_activity_meal_sub_type">Meal Sub Type</string>
    <string name="rbBreakfast">BreakFast</string>
    <string name="rbBrunch">Brunch</string>
    <string name="rbLunch">Lunch</string>
    <string name="rbSnacks">Snacks</string>
    <string name="rbDinner">Dinner</string>
    <string name="action_addFood">Add to meal</string>
    <string name="title_activity_show_meal_plan">My Meal Plan</string>
	<string name="showInformation">Food Information</string>
</resources>
