<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        
<RelativeLayout     
     android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/editTextUserName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtEmergencyPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtName"
        android:layout_alignRight="@+id/txtName"
        android:layout_below="@+id/txtName"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/editTextEmergencyPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/txtDrName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEmergencyPhone"
        android:layout_alignRight="@+id/txtEmergencyPhone"
        android:layout_below="@+id/txtEmergencyPhone"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/editTextDrName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/editTextAddress"
        android:inputType="textMultiLine|textPostalAddress"
        android:scrollHorizontally="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="horizontal|vertical" />

    <EditText
        android:id="@+id/txtDrPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDrName"
        android:layout_alignRight="@+id/txtDrName"
        android:layout_below="@+id/txtDrName"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/editTextDrPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDrPhone"
        android:layout_alignRight="@+id/txtDrPhone"
        android:layout_below="@+id/txtDrPhone"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/editTextEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAddress"
        android:layout_below="@+id/txtAddress"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/editTextAge"
        android:inputType="number"
        android:maxLength="3" />

</RelativeLayout>
</ScrollView>