<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManageEmergencyModule" >

    <RadioGroup
        android:id="@+id/rgManageEmergencyModule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbEnableEmergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:text="@string/rbStringEnableEmergency" />

        <RadioButton
            android:id="@+id/rbDisableEmergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbStringDisableEmergency" />
    </RadioGroup>

    <Button
        android:id="@+id/btnChangeEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rgManageEmergencyModule"
        android:layout_below="@+id/rgManageEmergencyModule"
        android:layout_marginTop="28dp"
        android:text="@string/txtStringChangeEmergency" />
    
</RelativeLayout>
