<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <CheckBox
        android:id="@+id/checkBoxInsulin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxInsulin"
        android:layout_alignBottom="@+id/checkBoxInsulin"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/checkBoxInsulin"
        android:text="@string/textView" />

    <EditText
        android:id="@+id/editTextGlucoseLevel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxInsulin"
        android:layout_alignBottom="@+id/checkBoxInsulin"
        android:layout_alignTop="@+id/checkBoxInsulin"
        android:layout_marginLeft="120dp"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:text="@string/dosage"
        android:width="100dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxInsulin"
        android:layout_alignBottom="@+id/checkBoxInsulin"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/editTextGlucoseLevel"
        android:text="@string/insulinUnits" />

</RelativeLayout>