<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
<RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="50dp"
        android:text="@string/toDate" 
        android:layout_marginLeft="1dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/fromDate" />

    <Spinner
        android:id="@+id/spinnerFromDay"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spinnerFromMonth" />

    <Spinner
        android:id="@+id/spinnerToDay"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/spinnerFromDay"
        android:layout_alignTop="@+id/spinnerToMonth" />

    <Spinner
        android:id="@+id/spinnerFromMonth"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/spinnerFromYear"
        android:layout_toRightOf="@+id/spinnerFromDay" />

    <Spinner
        android:id="@+id/spinnerToMonth"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/spinnerToYear"
        android:layout_toRightOf="@+id/spinnerToDay" />

    <Spinner
        android:id="@+id/spinnerToYear"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/spinnerToMonth" />

    <Spinner
        android:id="@+id/spinnerFromYear"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/spinnerFromMonth" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerToMonth"
        android:layout_below="@+id/spinnerToMonth"
        android:layout_marginTop="16dp"
        android:text="@string/btnSearch" />
    
</RelativeLayout>
</ScrollView>